# plc-vscode

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
.pi/: taskplane.json
crates/plc_api/: Cargo.toml
crates/plc_api/src/: lib.rs
crates/plc_cli/: Cargo.toml
crates/plc_cli/src/: lib.rs  main.rs
crates/plc_cli/src/dap/: mod.rs  protocol.rs  session.rs
crates/plc_cli/tests/: dap_protocol.rs  language_aware.rs  pluggable_engine.rs  run_command.rs
crates/plc_compiler_core/: Cargo.toml
crates/plc_compiler_core/src/: execution.rs  lib.rs
crates/plc_compiler_core/tests/: api_contract.rs  execution_contract.rs  prg_test_api.rs
crates/plc_cpdev_backend/: Cargo.toml
crates/plc_cpdev_backend/spec_xml/: UPSTREAM.md  VM-Univ.xml  VMCore.xml  flash.xml  le-IF.xml  lreals.xml  strings.xml
crates/plc_cpdev_backend/src/: asm.rs  assembler.rs  codegen.rs  dcp.rs  layout.rs  lib.rs  spec.rs  std_fb.rs  types.rs
crates/plc_cpdev_backend/tests/: codegen.rs  reassemble_fixture.rs
crates/plc_cpdev_vm/: Cargo.toml  build.rs
crates/plc_cpdev_vm/shim/: cpdev_shim.cpp  cpdev_shim.h
crates/plc_cpdev_vm/src/: lib.rs
crates/plc_cpdev_vm/tests/: cpdev_emit_run.rs  cpdev_golden.rs
crates/plc_hir/: Cargo.toml
crates/plc_hir/src/: lib.rs
crates/plc_hir/tests/: lowering.rs  prg_test_lowering.rs
crates/plc_lang/: Cargo.toml
crates/plc_lang/src/: il.rs  ld.rs  lib.rs  st.rs
crates/plc_lang/tests/: conversion_ld.rs  conversion_st_il.rs  full_ld_program.rs  prg_test_conversion.rs
crates/plc_ld/: Cargo.toml
crates/plc_ld/src/: lib.rs  lower.rs  model.rs  power_flow.rs
crates/plc_ld/tests/: full_ld_program.rs
crates/plc_llvm_backend/: Cargo.toml
crates/plc_llvm_backend/src/: lib.rs
crates/plc_llvm_backend/tests/: golden_ir.rs  output_modes.rs
crates/plc_lsp_server/: Cargo.toml
crates/plc_lsp_server/src/: lib.rs  main.rs
crates/plc_lsp_server/tests/: change_recovery.rs  diagnostics_mapping.rs  document_symbols.rs  editing.rs  language_features.rs  navigation.rs  pluggable_backend.rs  prg_test_lsp.rs  protocol.rs  semantic_tokens.rs  signature_help.rs  workspace_symbols.rs
crates/plc_lsp_server/tests/fixtures/: prg_test_st.st
crates/plc_runtime/: Cargo.toml
crates/plc_runtime/src/: bytecode.rs  clock.rs  counters.rs  debug.rs  edge.rs  engine.rs  interp.rs  lib.rs  stdlib.rs  timers.rs  value.rs
crates/plc_runtime/tests/: bytecode.rs  bytecode_golden.rs  conformance_parser.rs  conformance_runtime.rs  conformance_semantics.rs  counters.rs  debug_hook.rs  engine.rs  forcing.rs  interpreter.rs  literals.rs  prg_test_literals.rs  prg_test_st.rs  prg_test_state.rs  prg_test_stdlib.rs  scan_cycle.rs  stdlib.rs  timers.rs  virtual_time.rs
crates/plc_semantics/: Cargo.toml
crates/plc_semantics/src/: lib.rs  query.rs  types.rs
crates/plc_semantics/tests/: diagnostics.rs  prg_test_semantics.rs  query_architecture.rs  symbol_index.rs  type_model.rs
crates/plc_syntax/: Cargo.toml
crates/plc_syntax/src/: cst.rs  lexer.rs  lib.rs  parser.rs
crates/plc_syntax/test_data/parser/: malformed_missing_end_program.st
crates/plc_syntax/tests/: cst.rs  lexer.rs  parser.rs  prg_test_lexer.rs  prg_test_parser.rs  recovery_fixtures.rs
crates/plc_workspace/: Cargo.toml
crates/plc_workspace/src/: lib.rs
crates/plc_workspace/tests/: architecture_contract.rs
docs/: conformance.md  licensing.md  release.md  roadmap.md  setup.md
docs/architecture/: bytecode.md  compiler-core-api.md  ladder-diagram.md  llvm-toolchain.md  workspace.md
docs/superpowers/specs/: 2026-06-15-sem0001-residual-resolution-design.md
editors/vscode/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/scripts/: verify-vsix.js
editors/vscode/src/: bundled.ts  extension.ts  ldEditor.ts
editors/vscode/syntaxes/: structured-text.tmLanguage.json
editors/vscode/test/: package-contract.test.js  verify-vsix.test.js
tests/ld/: motor_control.ld
tests/st/: README.md  all-files.txt  large-over-100kb-files.txt  manifest.json  non-utf8-files.txt  plc-st-only.code-workspace  test-ready-files.txt
tests/st/all/trust-platform/examples/ethercat_ek1100_elx008_v2/src/: Main.st
tests/st/all/trust-platform/examples/filling_line/src/: Interfaces.st  LevelController.st  PumpDrive.st  Types.st
tests/st/all/trust-platform/examples/plant_demo/src/: program.st  types.st
tests/st/all/trust-platform/examples/plcopen_motion_oop_feeder_axis/src/: Main.st
tests/st/all/trust-platform/examples/plcopen_motion_oop_indexing_table/src/: Main.st
tests/st/all/trust-platform/examples/plcopen_motion_oop_labeling_conveyor/src/: Main.st
tests/st/all/trust-platform/examples/plcopen_motion_oop_pick_place_lift/src/: Main.st
tests/st/all/trust-platform/examples/plcopen_motion_single_axis_demo/src/: Globals.st  Main.st
tests/st/all/trust-platform/examples/plcopen_xml_st_complete/src/: types.st
tests/st/all/trust-platform/examples/tutorials/: 01_hello_counter.st  02_blinker.st  04_tank_level.st  07_pid_loop.st
tests/st/test-ready/trust-platform/examples/blockly/: snake-simple-v2.st
tests/st/test-ready/trust-platform/examples/filling_line/src/: Configuration.st  Main.st  ValveActuator.st
tests/st/test-ready/trust-platform/examples/openot_multi_program/src/: Main.st
tests/st/test-ready/trust-platform/examples/oscat_smoke/src/: Configuration.st  Main.st
tests/st/test-ready/trust-platform/examples/plant_demo/src/: fb_pump.st
tests/st/test-ready/trust-platform/examples/plcopen_motion_oop_warehouse_shuttle/src/: Main.st
tests/st/test-ready/trust-platform/examples/plcopen_xml_st_complete/src/: configuration.st  main.st
tests/st/test-ready/trust-platform/examples/tutorials/: 03_traffic_light.st  05_motor_starter.st  06_recipe_manager.st  08_conveyor_system.st  09_simulation_coupling.st
tests/st/test-ready/trust-platform/examples/vendor_library_stubs/src/: Configuration.st  Main.st
tests/st/test-ready/trust-platform/manual-tests/clean-root/src/: Main2.st
website/: index.html
(+424 files in other folders)
