[workspace]
resolver = "3"
members = [
    "crates/plc_workspace",
    "crates/plc_api",
    "crates/plc_syntax",
    "crates/plc_semantics",
    "crates/plc_runtime",
    "crates/plc_hir",
    "crates/plc_lsp_server",
    "crates/plc_compiler_core",
    "crates/plc_cli",
]
# The LLVM backend is isolated from the default workspace build so the rest of
# the suite stays fast and LLVM-free. Build/test it explicitly with an LLVM 18
# toolchain (see docs/architecture/llvm-toolchain.md):
#   cargo test --manifest-path crates/plc_llvm_backend/Cargo.toml
exclude = ["crates/plc_llvm_backend"]
