[workspace]
resolver = "3"
members = [
    "crates/plc_workspace",
    "crates/plc_api",
    "crates/plc_lang",
    "crates/plc_syntax",
    "crates/plc_semantics",
    "crates/plc_runtime",
    "crates/plc_hir",
    "crates/plc_lsp_server",
    "crates/plc_compiler_core",
    "crates/plc_cli",
]
# These crates carry heavyweight native toolchains and are isolated from the
# default workspace build so the rest of the suite stays fast and dependency-light.
# Build/test them explicitly with their manifest:
#   cargo test --manifest-path crates/plc_llvm_backend/Cargo.toml   (needs LLVM 18; see docs/architecture/llvm-toolchain.md)
#   cargo test --manifest-path crates/plc_cpdev_vm/Cargo.toml       (needs a C++ toolchain; vendors the CPDev VM)
exclude = ["crates/plc_llvm_backend", "crates/plc_cpdev_vm"]
