[package]
name = "plc_cli"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
publish = false
description = "CLI for PLC VS Code Structured Text tooling."

[dependencies]
plc_api = { path = "../plc_api" }
plc_compiler_core = { path = "../plc_compiler_core" }
plc_runtime = { path = "../plc_runtime" }
plc_lang = { path = "../plc_lang" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "plc"
path = "src/main.rs"
