[package]
name = "plc_cli"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
publish = false
description = "CLI for PLC VS Code Structured Text tooling."

[dependencies]
plc_api = { path = "../plc_api" }
plc_compiler_core = { path = "../plc_compiler_core" }
plc_runtime = { path = "../plc_runtime" }
plc_lang = { path = "../plc_lang" }
# Optional CPDev bytecode (.xcp) engine. Off by default so the `plc` binary and
# the default workspace build need no C++ toolchain; enable with `--features cpdev`.
plc_cpdev_vm = { path = "../plc_cpdev_vm", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
cpdev = ["dep:plc_cpdev_vm"]

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "plc"
path = "src/main.rs"
