[package]
name = "plc_compiler_core"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
publish = false
description = "Shared compiler-core API for PLC VS Code CLI, LSP, runtime and backends."

[lib]
path = "src/lib.rs"

[dependencies]
plc_api = { path = "../plc_api" }
plc_semantics = { path = "../plc_semantics" }
plc_syntax = { path = "../plc_syntax" }
