[package]
name = "plc_lsp_server"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Language server for PLC VS Code Structured Text support."

[dependencies]
plc_compiler_core = { path = "../plc_compiler_core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tower-lsp = "0.20"

[lib]
path = "src/lib.rs"

[[bin]]
name = "plc-lsp-server"
path = "src/main.rs"
