[package]
name = "plc_runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Deterministic PLC scan-cycle runtime and simulator for PLC VS Code."

[lib]
path = "src/lib.rs"

[dependencies]
plc_syntax = { path = "../plc_syntax" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
plc_compiler_core = { path = "../plc_compiler_core" }
