[package]
name = "plc_runtime"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
publish = false
description = "Deterministic PLC scan-cycle runtime and simulator for PLC VS Code."

[lib]
path = "src/lib.rs"

[dependencies]
plc_api = { path = "../plc_api" }
plc_syntax = { path = "../plc_syntax" }
plc_hir = { path = "../plc_hir" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
plc_compiler_core = { path = "../plc_compiler_core" }
